# anki-copy-card-egui

./: Cargo.toml
src/: main.rs
