[package]
name = "anki-copy-card-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28"
eframe = "0.28"
ureq = { version = "2.12", features = ["json"] }
anyhow = "1"
ammonia = "4"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam = "0.8"
tap = "1"
